--- a/app/Resources/views/book/show.html.twig
+++ b/app/Resources/views/book/show.html.twig
@@ -2,62 +2,97 @@
 
 {% block body %}
 
-    <div class="pull-left">
-        <img src="{{ vich_uploader_asset(book, 'coverImage') | imagine_filter('thumb') }}" alt="{{ book.title }}" class="img-thumbnail" />
-    </div>    
+    <div class="row">
+        <div class="col-md-8">
 
-    <h2>{{ book.title }}</h2>
-    <h3><a href="{{ path('author_show', { 'id': book.author.id }) }}">{{ book.author.name }}</a></h3>
-    {% if book.publishDate %}<p>Publish Date: {{ book.publishDate|date('Y-m-d') }}</p>{% endif %}
-    {% if book.translator %}<p>Translator: {{ book.translator.name }}</p>{% endif %}    
-    {% if book.publisher %}<p>Publisher: {{ book.publisher.name }}</p>{% endif %}
-    <p>{{ book.description }}</p>
+            <div class="pull-left">
+                <img src="{{ vich_uploader_asset(book, 'coverImage') | imagine_filter('thumb') }}" alt="{{ book.title }}" class="img-thumbnail" />
+            </div>    
 
-    {{ form_start(rating_form, {
-        'action': path('book_show', { 'id': book.id }), 
-        'method': 'POST',
-        'attr': {
-            'id': 'ratingForm',
-            'class': 'form-inline'
-            }
-    }) }}
-        {{ form_row(rating_form.rate) }}
-        <input type="submit" value="Rate" class="btn btn-default btn-xs"> 
-    {{ form_end(rating_form) }}
+            <h2>{{ book.title }}</h2>
+            <h3><a href="{{ path('author_show', { 'id': book.author.id }) }}">{{ book.author.name }}</a></h3>
+            {% if book.publishDate %}<p>Publish Date: {{ book.publishDate|date('Y-m-d') }}</p>{% endif %}
+            {% if book.translator %}<p>Translator: {{ book.translator.name }}</p>{% endif %}    
+            {% if book.publisher %}<p>Publisher: {{ book.publisher.name }}</p>{% endif %}
+            <p>{{ book.description }}</p>
 
-    <p>
-        <span id="avgRate">{{ avgRating|round(2) }}</span>
-         ({{ratingCount}} votes)
-     </p>
+{#             {{ form_start(rating_form, {
+                'action': path('book_show', { 'id': book.id }), 
+                'method': 'POST',
+                'attr': {
+                    'id': 'ratingForm',
+                    'class': 'form-inline'
+                    }
+            }) }}
+                {{ form_row(rating_form.rate) }}
+                <input type="submit" value="Rate" class="btn btn-default btn-xs"> 
+            {{ form_end(rating_form) }} #}
+            <select id="rating_show">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>  
+            </select>
+            <p>
+                <span id="avgRate">{{ avgRating|round(2) }}</span>
+                 ({{ratingCount}} votes)
+             </p>
 
-    <div class="clearfix"></div>
+            <div class="clearfix"></div>
 
-    <hr>
-    <a href="{{ path('book_index') }}" class="btn btn-default pull-left">Back to the list</a>
+            <h3>Reviews:</h3>
+            <div class="panel panel-default">
+                {% for review in bookReviews %}
+                    <div class="panel-heading">
+                        <strong>{{review.reader}}</strong>, 
+                        {{review.publishDate|date('Y-m-d')}} 
+                        [ user rating]
+                    </div>        
+                    <div class="panel-body">{{review.contents}}</div>   
+                {% endfor %}
+            </div>
+        </div>
+        <div class="col-md-4">
+            <h3>Admin options</h3>
+            <a href="{{ path('book_edit', { 'id': book.id }) }}" class="btn btn-default pull-left">Edit</a>
 
-    <a href="{{ path('book_edit', { 'id': book.id }) }}" class="btn btn-default pull-left">Edit</a>
+            {{ form_start(delete_form) }}
+                <input type="submit" value="Delete" class="btn btn-danger">
+            {{ form_end(delete_form) }}
 
-    {{ form_start(delete_form) }}
-        <input type="submit" value="Delete" class="btn btn-danger pull-left">
-    {{ form_end(delete_form) }}
-    
-    <div class="clearfix"></div>
-    <hr>
-    <h3>Reviews:</h3>
-    {{ form_start(review_form, {
-        'action': path('book_show', { 'id': book.id }), 
-        'method': 'POST'
-        }) 
-    }}
-        {{ form_widget(review_form) }}
-        <input type="submit" value="Add review" class="btn btn-default"> 
-    {{ form_end(review_form) }}
-    <hr>
-    <div class="panel panel-default">
-        {% for review in bookReviews %}
-            <div class="panel-heading">[User]: {{review.publishDate|date('Y-m-d')}} [Logged user rating]</div>        
-            <div class="panel-body">{{review.contents}}</div>   
-        {% endfor %}
-    </div>
+            <h3>Rate this book</h3>
+            {{ form_start(rating_form, {
+                'action': path('book_show', { 'id': book.id }), 
+                'method': 'POST',
+                'attr': {
+                    'id': 'ratingForm',
+                    'class': 'form-inline'
+                    }
+                }) 
+            }}
+            {{ form_row(rating_form.rate) }}
+                <input type="submit" value="Rate" class="btn btn-default btn-xs"> 
+            {{ form_end(rating_form) }}
+
+            <h3>Add review</h3>
+            {{ form_start(review_form, {
+                'action': path('book_show', { 'id': book.id }), 
+                'method': 'POST'
+                }) 
+            }}
+            {{ form_widget(review_form) }}
+                <input type="submit" value="Add review" class="btn btn-default"> 
+            {{ form_end(review_form) }}
+
+            <a href="{{ path('book_index') }}" class="btn btn-default">Back to the list</a>
+
+        </div>
+    </div>        
 
 {% endblock %}
