--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,6 +14,48 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              {% if is_granted('ROLE_ADMIN') %}
+                  <a class="navbar-brand" href="{{path('portal_default_index')}}">Readers Portal <i class="ion-social-buffer"></i></a>
+                  {% else %}
+                  <a class="navbar-brand" href="#">Readers Portal <i class="ion-social-buffer"></i></a>                
+              {% endif %}              
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav navbar-right">                
+              {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}              
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Options <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="{{path('fos_user_profile_show')}}">Show profile</a></li>
+                    <li><a href="{{path('fos_user_profile_edit')}}">Edit profile</a></li>
+                    <li><a href="{{path('fos_user_change_password')}}">Change password</a></li>
+                  </ul>
+                </li>                
+                <li>
+                    <a>{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}</a>
+                </li>
+                <li>
+                    <a href="{{ path('fos_user_security_logout') }}">
+                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                    </a>
+                </li>
+              {% else %}
+                <li><a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a></li>
+                <li><a href="{{ path('fos_user_registration_register') }}">{{ 'layout.register'|trans({}, 'FOSUserBundle') }}</a></li>
+              {% endif %}
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>        
         <div class="container">
           <div class="row">
             <div class="col-md-12">
