--- a/app/Resources/views/book/show.html.twig
+++ b/app/Resources/views/book/show.html.twig
@@ -4,7 +4,6 @@
 
     <div class="row">
         <div class="col-md-8">
-
             <div class="pull-left">
                 <img src="{{ vich_uploader_asset(book, 'coverImage') | imagine_filter('thumb') }}" alt="{{ book.title }}" class="img-thumbnail" />
             </div>    
@@ -89,7 +88,7 @@
                 {{ form_row(rating_form.rate) }}
                     <input type="submit" value="Rate" class="btn btn-default btn-xs"> 
                 {{ form_end(rating_form) }}
-
+                <hr>
                 <h3>Add review</h3>
                 {{ form_start(review_form, {
                     'action': path('book_show', { 'id': book.id }), 
@@ -106,6 +105,20 @@
             {% endif %}    
 
             <hr>
+
+            {% if app.session.flashBag.has('success') %}
+                <div class="alert alert-success">
+                    {% for msg in app.session.flashBag.get('success') %}
+                        {{ msg }}
+                    {% endfor %}
+                </div>
+            {% endif %}
+
+            {{ form_start(read_form, {'attr': {'class': 'form-inline'} }) }}
+                <input type="submit" value="Mark as Read" class="btn btn-success">
+            {{ form_end(read_form) }}
+
+            <a href="{{ path('book_index') }}" class="btn btn-default">Add to favourite</a>
             <a href="{{ path('book_index') }}" class="btn btn-default">Back to the list</a>
 
         </div>
