Dodane jQuery autocomplete

--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -1,9 +1,14 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 <div class="fos_user_user_show">
-    <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
-    <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+    <p>{{ 'profile.show.username'|trans }}: {{ reader.username }}</p>
+    <p>{{ 'profile.show.email'|trans }}: {{ reader.email }}</p>
     <p>My books</p>
+    {% for book in books %}
+    	{{book.title}}<br>
+    {% endfor %}
+
     <p>My reviews</p>
     <p>My ratings</p>
+
 </div>
