--- a/app/Resources/views/book/show.html.twig
+++ b/app/Resources/views/book/show.html.twig
@@ -44,7 +44,7 @@
     <div class="row">
         <div class="col-md-8">
             <img src="{{ vich_uploader_asset(book, 'coverImage') | imagine_filter('thumb') }}" alt="{{ book.title }}" class="img-thumbnail img-show pull-left" />
-            <h2>{{ book.title }}</h2>
+            <h3>{{ book.title }}</h3>
             <h4>by <a href="{{ path('author_show', { 'id': book.author.id }) }}">{{ book.author.name }}</a></h4>
             <select class="showRating">
               <option value="1">1</option>
@@ -69,33 +69,20 @@
             <a id="ratingDetails" data-toggle="modal" data-target="#myModal">
                 <i class="fa fa-bar-chart" aria-hidden="true"></i> Rating details
             </a>
-
-
-{# {% for i in 1..10 %}
-    {% set sum = 0 %}
-    {% for rating in book.ratings %}
-        {% if i == rating.rate %}
-            {% set sum = sum + 1 %}
-        {% endif %}
-    {% endfor %}
-    <i class="fa fa-star-o" aria-hidden="true"></i> {{i}}
-    <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="{{ sum }}" aria-valuemin="0" aria-valuemax="10" style="width: {{ sum * 10}}%;">
-        {{sum}}
-      </div>
-    </div>
-{% endfor %}  #}
-
             <hr> 
             <p>{{ book.description }}</p>
             <hr>
             {% if book.publishDate %}<small>Publish Date: {{ book.publishDate|date('Y-m-d') }}</small><br>{% endif %}
             {% if book.translator %}<small>Translator: {{ book.translator.name }}</small><br>{% endif %}    
-            {% if book.publisher %}<small>Publisher: {{ book.publisher.name }}</small>{% endif %}
-
+            {% if book.publisher %}<small>Publisher: {{ book.publisher.name }}</small>{% endif %}<br>
+            <small>ISBN:</small><br>
+            <small>Genres:</small><br>
+            <small>Tags:</small>
+            <hr>
             <div class="clearfix"></div>
 
-            <h3>Reviews:</h3>
+            <h4>Reviews</h4>
+            <p>Filter, sort</p>
             <div class="panel panel-default">
                 {% for review in book.reviews %}
                     <div class="panel-heading">
@@ -136,7 +123,7 @@
 
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 
-                <h3>Rate this book</h3>
+                <h4>Rate this book</h4>
                 {{ form_start(rating_form, {
                     'action': path('book_show', { 'id': book.id }), 
                     'method': 'POST',
@@ -151,7 +138,7 @@
                     <input type="submit" value="Rate" class="btn btn-default btn-xs"> 
                 {{ form_end(rating_form) }}
                 <hr>
-                <h3>Add review</h3>
+                <h4>Add review</h4>
                 {{ form_start(review_form, {
                     'action': path('book_show', { 'id': book.id }), 
                     'method': 'POST'
@@ -159,7 +146,7 @@
                 }}
                 {{ form_errors(review_form) }}
                 {{ form_widget(review_form) }}
-                    <input type="submit" value="Add review" class="btn btn-default"> 
+                    <input type="submit" value="Add review" class="btn btn-default btn-xs"> 
                 {{ form_end(review_form) }}
 
             {% else %}
@@ -176,14 +163,28 @@
                 </div>
             {% endif %}
 
-            {{ form_start(read_form, {'attr': {'class': 'form-inline'} }) }}
-                <input type="submit" value="Mark as Read" class="btn btn-primary">
+            {{ form_start(read_form) }}
+                <input type="submit" value="Mark as Read" class="btn btn-default btn-xs">
             {{ form_end(read_form) }}
 
-            {{ form_start(favourite_form, {'attr': {'class': 'form-inline'} }) }}
-                <input type="submit" value="Add to favourites" class="btn btn-success">
+            {{ form_start(favourite_form) }}
+                <input type="submit" value="Add to favourites" class="btn btn-default btn-xs">
             {{ form_end(favourite_form) }}
 
+            {{ form_start(wanted_form) }}
+                <input type="submit" value="Add to wanted" class="btn btn-default btn-xs">
+            {{ form_end(wanted_form) }}
+
+            <p>Mark as currently reading</p>            
+
+            <hr>
+            <h4>On Shelves</h4>
+            <p>Want to read: {{book.wantedBooks|length}}</p>
+            <p>Currently reading:</p>            
+            <p>Read: {{book.readers|length}}</p>
+
+            <hr>
+            <h4>Quotes</h4>            
         </div>
     </div>        
 
