--- a/app/Resources/views/book/show.html.twig
+++ b/app/Resources/views/book/show.html.twig
@@ -175,12 +175,14 @@
                 <input type="submit" value="Add to wanted" class="btn btn-default btn-xs">
             {{ form_end(wanted_form) }}
 
-            <p>Mark as currently reading</p>            
+            {{ form_start(current_form) }}
+                <input type="submit" value="Add to current" class="btn btn-default btn-xs">
+            {{ form_end(current_form) }}           
 
             <hr>
             <h4>On Shelves</h4>
             <p>Want to read: {{book.wantedBooks|length}}</p>
-            <p>Currently reading:</p>            
+            <p>Currently reading: {{book.currentBooks|length}}</p>            
             <p>Read: {{book.readers|length}}</p>
 
             <hr>
