--- a/app/Resources/views/book/recent.html.twig
+++ b/app/Resources/views/book/recent.html.twig
@@ -2,7 +2,9 @@
   <div class="item">
     <br>
     <div class="pull-left">
+      {% if vich_uploader_asset(book, 'coverImage') is not null %}
         <img src="{{ vich_uploader_asset(book, 'coverImage') | imagine_filter('s_thumb') }}" alt="{{ book.title }}" class="img-thumbnail" />
+      {% endif %}
     </div>     
     <h3><a href="{{ path('book_show', { 'id': book.id }) }}">{{ book.title }}</a></h3>
     <h4>by <a href="{{ path('author_show', { 'id': book.author.id }) }}">{{ book.author.name }}</a></h4>
