--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,10 +5,10 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></link>
-            <link rel="stylesheet" href="{{ asset('bundles/portal/css/jquery-ui.min.css') }}"></link>
-            <link rel="stylesheet" href="{{ asset('bundles/portal/css/jquery-ui.structure.min.css') }}"></link>
-            <link rel="stylesheet" href="{{ asset('bundles/portal/css/jquery-ui.theme.min.css') }}"></link>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+            <link rel="stylesheet" href="{{ asset('bundles/portal/css/jquery-ui.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('bundles/portal/css/jquery-ui.structure.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('bundles/portal/css/jquery-ui.theme.min.css') }}">
             <link rel="stylesheet" href="{{ asset('bundles/portal/css/style.css') }}" />
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
@@ -182,7 +182,6 @@
                   source: "{{ path('publisher_search') }}"                  
                 });
               });
-
 
             </script>
         {% endblock %}
